deploymentwithingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: learning-ingress
  labels: 
    app: webapp
