deploymentwithingress/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webapp-svc
  namespace: learning-ingress
spec:
  selector:
    app: webapp
  type: ClusterIP
  ports:
  - name: webapp-svc-port
    port:  80
    targetPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: apache-svc
  namespace: learning-ingress
spec:
  selector:
    app: apache
  type: ClusterIP
  ports:
  - name: apache-svc-port
    port:  80
    targetPort: 80
