deploymentwithingress/ingressrules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-svc-ingress
  namespace: learning-ingress
  labels:
    app: webapp  
spec:
  ingressClassName: nginx
  rules:
  - http: 
      paths:
      - path: /webapp
        pathType: Prefix
        backend:
          service:
            name: webapp-svc
            port:
              number: 80
